Updates from the unit tests and buid all